--- a/package.json
+++ b/package.json
@@ -1,26 +1,36 @@
 {
-  "name": "imsummit",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
-  "dependencies": {
-    "core-js": "^3.6.4",
-    "vue": "^2.6.11",
-    "vue-router": "^3.1.5"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.2.0",
-    "@vue/cli-plugin-router": "^4.2.0",
-    "@vue/cli-service": "^4.2.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+    "name": "imsummit",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build"
+    },
+    "dependencies": {
+        "core-js": "^3.6.4",
+        "vee-validate": "^3.2.5",
+        "vue": "^2.6.11",
+        "vue-router": "^3.1.5"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "^4.2.0",
+        "@vue/cli-plugin-router": "^4.2.0",
+        "@vue/cli-service": "^4.2.0",
+        "axios": "^0.19.2",
+        "bootstrap": "^4.4.1",
+        "bootstrap-vue": "^2.5.0",
+        "file-loader": "^5.0.2",
+        "node-sass": "^4.12.0",
+        "sass-loader": "^8.0.2",
+        "style-loader": "^1.0.0",
+        "style-resources-loader": "^1.2.1",
+        "url-loader": "^3.0.0",
+        "vue-loader": "^15.7.1",
+        "vue-style-loader": "^4.1.2",
+        "vue-template-compiler": "^2.6.10"
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions"
+    ]
 }
